# Project-PrivateTutor

./: .gitignore  Makefile  README.md  requirements.txt  server_requests.py  swagger.yaml  teacher_student_view.py  test_connection.py  test_mongo.py  website.py
generated-server/: openapi.yaml  setup.cfg
generated-server/.openapi-generator/: FILES
generated-server/src/openapi_server/: main.py
generated-server/src/openapi_server/apis/: default_api.py  default_api_base.py
generated-server/src/openapi_server/models/: meetings_schedule_post_request.py  model_class.py  person.py  schedule.py  student.py  teacher.py
generated-server/tests/: test_default_api.py
server/: .dockerignore  .gitignore  Makefile  README.md  openapi.yaml  requirements.txt  setup.cfg  setup.py
server/.openapi-generator/: FILES
server/DAL/: MongoDB.py
server/openapi_server/: __main__.py  encoder.py  util.py
server/openapi_server/controllers/: default_controller.py  meeting_controller.py  student_controller.py  teacher_controller.py  user_controller.py
server/openapi_server/models/: DB_utils.py  File.py  Mongo.py  __init__.py  base_model.py  meeting.py  meeting_summary.py  person.py  student.py  teacher.py  time_interval.py  update_user_request.py  user.py
server/openapi_server/openapi/: openapi.yaml
server/openapi_server/test/: __init__.py  check_global_mongo.py  google_endpoint.py  mongo_CRUD_test.py  test_File_mongo.py  test_default_controller.py  test_get_files_mongo.py  test_meeting_endpoints.py  test_meeting_mongo.py  test_mongo.py  test_person_mongo.py  test_save_file_mongo.py  test_student_endpoint.py  test_student_mongo.py  test_teacher_endpoint.py  test_teacher_mongo.py  test_user_controller.py  test_user_mongo.py
server/tests/: test_default_api.py
student-teacher-meeting-scheduler-api-client/: README.md  pyproject.toml
student-teacher-meeting-scheduler-api-client/student_teacher_meeting_scheduler_api_client/: __init__.py
student-teacher-meeting-scheduler-api-client/student_teacher_meeting_scheduler_api_client/models/: __init__.py  meeting.py  person.py  student.py  teacher.py
(+25 files in other folders)
